--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -6,3 +6,65 @@ $textColor: #FFF;
 $toDoYellow: #FBFF3C;
 $toDoRed: #FF4646;
 $toDoLightGrey: #A6A6A6;
+
+body {
+  background-color: $backgroundColor;
+  color: $textColor;
+}
+
+header {
+  height: 80px;
+  width: 100%;
+  border-bottom: 3px solid $toDoYellow;
+  display: flex;
+
+  button {
+    min-width: 75px;
+    color: $toDoYellow;
+    background-color: transparent;
+    border: none;
+
+    &:nth-child(1), &:nth-child(3) {
+      &:hover {
+        color: $textColor;
+        text-shadow: 1px 1px 2px $toDoYellow;
+      }
+
+      &:active {
+        text-shadow: none;
+      }
+    }
+
+    span {
+      font-size: 3rem!important;
+    }
+  }
+
+  #categories-btn {
+    flex-grow: 1;
+
+    span:nth-child(1) {
+      display: block;
+      position: relative;
+      top: 15px;
+      color: $textColor;
+      font-size: 1.5rem!important;
+    }
+
+    &:hover {
+      span:nth-child(1) {
+        color: $toDoYellow;
+        text-shadow: 1px 1px 2px $textColor;
+      }
+
+      span:nth-child(2) {
+        color: $textColor;
+        text-shadow: 1px 1px 2px $toDoYellow;
+      }
+
+      &:active span {
+        text-shadow: none;
+      }
+    }
+  }
+}
