--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,3 +1,4 @@
+/* stylelint-disable no-descending-specificity */
 @use "utils/a11y"; // Om det inte funkar, byt @use mot @import
 @use "vendor/reset";
 
@@ -6,10 +7,11 @@ $textColor: #FFF;
 $toDoYellow: #FBFF3C;
 $toDoRed: #FF4646;
 $toDoLightGrey: #A6A6A6;
+$toDoGrey: #222;
 
 body {
   background-color: $backgroundColor;
-  color: $textColor;
+  overflow-x: hidden;
 }
 
 header {
@@ -65,6 +67,50 @@ header {
       &:active span {
         text-shadow: none;
       }
+    }
+  }
+}
+
+.add-item-container {
+  position: fixed;
+  min-height: calc(100vh - 80px);
+  width: 100%;
+  background-color: $backgroundColor;
+  display: flex;
+  justify-content: center;
+  padding: 20px 0;
+  right: -100%;
+  transition: right 0.3s ease-in-out;
+
+  &.open {
+    right: 0;
+  }
+ 
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 70%;
+    gap: 20px;
+
+    label {
+      width: 100%;
+      color: $textColor;
+    }
+
+    input {
+      height: 40px;
+      width: 100%;
+      padding-left: 20px;
+      border: 1px solid $toDoYellow;
+    }
+
+    button {
+      height: 40px;
+      width: 175px;
+      background-color: $toDoGrey;
+      color: $toDoYellow;
+      border: 3px solid $toDoYellow;
     }
   }
 }
