--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -81,9 +81,10 @@ header {
   position: fixed;
   min-height: calc(100vh - 80px);
   width: 100%;
-  background-color: $backgroundColor;
+  background-color: $toDoGrey;
   display: flex;
   padding: 10px 0;
+  z-index: 5;
 
   button {
     height: 40px;
