--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -77,7 +77,7 @@ header {
 /* ***********************SORT AND ADD******************* */
 
 .sort-container, .add-item-container {
-  position: fixed;
+  position: absolute;
   min-height: calc(100vh - 80px);
   width: 100%;
   background-color: $toDoGrey;
