--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -86,7 +86,7 @@ header {
 
 .sort-container, .categories-container, .add-item-container {
   position: absolute;
-  min-height: calc(100vh - 80px);
+  height: 100%;
   width: 100%;
   background-color: $toDoGrey;
   display: flex;
